--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -157,7 +157,93 @@
                     @include data-tooltip-align-top-right;
                 }
 
-                .eligible-processes-list { margin-top: 16px; }
+                .eligible-processes-list {
+                    margin-top: 16px;
+
+                    // NOTE: most of these styles are duplicated from ".process" @ "industry-plan.scss"
+                    .process {
+                        background-color: #111;
+                        cursor: pointer;
+                        display: flex;
+                        flex-direction: column;
+                        font-size: 90%;
+                        gap: 8px;
+                        padding: 8px;
+                        position: relative;
+
+                        &:not(:first-child) { border-top: 1px solid #222; }
+
+                        .process-header {
+                            --process-icon-size: 20px;
+                            align-items: center;
+                            color: rgba(255, 255, 255, 0.75);
+                            display: flex;
+                            gap: 8px;
+                            height: var(--process-icon-size);
+
+                            &::before {
+                                background-image: url('../assets/icons/icon-process.svg');
+                                background-position: center;
+                                background-repeat: no-repeat;
+                                background-size: 24px;
+                                content: '';
+                                display: inline-block;
+                                height: var(--process-icon-size);
+                                max-width: var(--process-icon-size);
+                                min-width: var(--process-icon-size);
+                                opacity: 0.75;
+                            }
+
+                            .process-name { @include single-line-with-ellipsis; }
+                        }
+
+                        .process-materials {
+                            align-items: center;
+                            display: flex;
+                            gap: 16px;
+                            justify-content: space-between;
+
+                            .inputs,
+                            .outputs {
+                                display: flex;
+                                flex-wrap: wrap;
+                                gap: 4px;
+
+                                .product-icon {
+                                    --product-icon-size: 24px;
+                                    border: 1px solid rgba(255, 255, 255, 0.2);
+                                    cursor: pointer;
+
+                                    &:hover { border-color: white; }
+                                }
+                            }
+
+                            .outputs { justify-content: flex-end; }
+
+                            .inputs .product-icon { @include data-tooltip-align-bottom-left; }
+                            .outputs .product-icon { @include data-tooltip-align-bottom-right; }
+
+                            .separator {
+                                &::after {
+                                    content: '⮕';
+                                    opacity: 0.5;
+                                }
+                            }
+                        }
+
+                        &:hover {
+                            @include hover-lighten-bg;
+
+                            .process-header {
+                                color: white;
+
+                                &::before { opacity: 1; }
+                            }
+
+                            .process-materials .separator::after { opacity: 1; }
+                        }
+                    }
+                }
             }
         }
     }
