--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -13,7 +13,7 @@
     z-index: 1;
 
     .overlay-content {
-        background-color: #222;
+        background-color: var(--color-body-bg);
         margin: 64px 0;
         padding: 32px;
     }
@@ -117,7 +117,7 @@
                     margin-top: 16px;
 
                     label {
-                        background-color: #111;
+                        background-color: var(--color-available-products-bg);
                         color: rgba(255, 255, 255, 0.75);
                         margin-left: -2px;
                         padding: 2px 16px 2px 2px;
@@ -142,7 +142,7 @@
                         &:has(input:not(:checked)) {
                             background-color: unset;
 
-                            .product-name { opacity: 0.25; }
+                            .product-name { opacity: 0.2; }
                         }
                     }
                 }
@@ -158,20 +158,16 @@
                 }
 
                 .eligible-processes-list {
+                    background-color: var(--color-processor-processes-bg);
                     margin-top: 16px;
 
                     // NOTE: most of these styles are duplicated from ".process" @ "industry-plan.scss"
                     .process {
-                        background-color: #111;
                         cursor: pointer;
-                        display: flex;
-                        flex-direction: column;
                         font-size: 90%;
-                        gap: 8px;
                         padding: 8px;
-                        position: relative;
 
-                        &:not(:first-child) { border-top: 1px solid #222; }
+                        &:not(:first-child) { border-top: 1px solid var(--color-body-bg); }
 
                         .process-header {
                             --process-icon-size: 20px;
@@ -195,52 +191,57 @@
                             }
 
                             .process-name { @include single-line-with-ellipsis; }
-                        }
 
-                        .process-materials {
-                            align-items: center;
-                            display: flex;
-                            gap: 16px;
-                            justify-content: space-between;
-
-                            .inputs,
-                            .outputs {
+                            .process-materials {
+                                align-items: center;
                                 display: flex;
-                                flex-wrap: wrap;
-                                gap: 4px;
+                                flex-grow: 1;
+                                gap: 16px;
+                                justify-content: flex-end;
+                                padding-left: 8px;
 
-                                .product-icon {
-                                    --product-icon-size: 24px;
-                                    border: 1px solid rgba(255, 255, 255, 0.2);
-                                    cursor: pointer;
+                                .inputs,
+                                .outputs {
+                                    display: flex;
+                                    flex-wrap: wrap;
+                                    gap: 4px;
 
-                                    &:hover { border-color: white; }
+                                    .product-icon {
+                                        --product-icon-size: 24px;
+                                        background-color: black;
+                                        border: 1px solid rgba(255, 255, 255, 0.2);
+                                        cursor: pointer;
+
+                                        &:hover { border-color: white; }
+                                    }
                                 }
-                            }
 
-                            .outputs { justify-content: flex-end; }
+                                .outputs { justify-content: flex-end; }
 
-                            .inputs .product-icon { @include data-tooltip-align-bottom-left; }
-                            .outputs .product-icon { @include data-tooltip-align-bottom-right; }
+                                .inputs .product-icon,
+                                .outputs .product-icon {
+                                    @include data-tooltip-align-top-right;
+                                }
 
-                            .separator {
-                                &::after {
-                                    content: '⮕';
-                                    opacity: 0.5;
+                                .separator {
+                                    &::after {
+                                        content: '⮕';
+                                        opacity: 0.5;
+                                    }
                                 }
                             }
                         }
 
                         &:hover {
-                            @include hover-lighten-bg;
+                            background-color: var(--color-processor-process-hover);
 
                             .process-header {
                                 color: white;
 
                                 &::before { opacity: 1; }
-                            }
 
-                            .process-materials .separator::after { opacity: 1; }
+                                .process-materials .separator::after { opacity: 1; }
+                            }
                         }
                     }
                 }
