--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -35,8 +35,8 @@
     }
 }
 
+.overlay-add-extraction,
 .overlay-add-process {
-    align-items: center;
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -51,7 +51,15 @@
 
         .overlay-title { font-size: 150%; }
     }
+}
 
+.overlay-add-extraction {
+    .extractions-list {
+        //// TO BE IMPLEMENTED
+    }
+}
+
+.overlay-add-process {
     .overlay-filters {
         display: flex;
         flex-direction: column;
