Add Extraction overlay: implement

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -31,6 +31,16 @@
     --color-add-button: rgba(255, 255, 255, 0.25);
     --color-available-products-bg: #1a1a1a;
     --color-body-bg: #222;
+    --color-category-volatile: rgb(91, 192, 245);
+    --color-category-volatile-bg: rgba(91, 192, 245, 0.1);
+    --color-category-organic: rgb(120, 211, 86);
+    --color-category-organic-bg: rgba(120, 211, 86, 0.1);
+    --color-category-metal: rgb(255, 133, 43);
+    --color-category-metal-bg: rgba(255, 133, 43, 0.1);
+    --color-category-rare-earth: rgb(255, 54, 54);
+    --color-category-rare-earth-bg: rgba(255, 54, 54, 0.1);
+    --color-category-fissile: rgb(138, 21, 255);
+    --color-category-fissile-bg: rgba(138, 21, 255, 0.1);
     --color-warning: rgb(223, 67, 0);
 }
 
