--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -292,6 +292,29 @@
                                     }
                                 }
 
+                                .inputs {
+                                    .spectral-type {
+                                        align-items: center;
+                                        border: 1px solid var(--color-processor-highlight-subtle);
+                                        border-radius: 50%;
+                                        color: var(--color-processor);
+                                        cursor: default;
+                                        display: flex;
+                                        font-size: 90%;
+                                        height: 24px;
+                                        justify-content: center;
+                                        opacity: 0.75;
+                                        width: 24px;
+
+                                        @include data-tooltip-align-bottom-left;
+
+                                        &:hover {
+                                            border-color: white;
+                                            color: white;
+                                        }
+                                    }
+                                }
+
                                 .outputs { justify-content: flex-end; }
 
                                 .inputs .product-icon { @include data-tooltip-align-bottom-left; }
@@ -343,7 +366,9 @@
                                     &::before { opacity: 1; }
                                 }
 
-                                .process-materials .separator::after { opacity: 1; }
+                                .process-materials {
+                                    .inputs .spectral-type, .separator::after { opacity: 1; }
+                                }
                             }
 
                             &:not(:hover) .remove-process { display: none; }
