Hide add-construction button after adding a process for empty-lot

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -53,10 +53,11 @@
 }
 
 body {
+    --body-padding: 64px;
     background-color: var(--color-body-bg);
     color: white;
     margin: 0;
-    padding: 64px;
+    padding: var(--body-padding);
     position: relative;
 
     // WIP
