--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -1,11 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Jura:wght@300;400;700&family=JetBrains+Mono:wght@100&display=swap);
 
-// NOTE: Any element with "[data-tooltip]" must also "@include" one of these mixins
-@mixin data-tooltip-align-top-left { &::after { bottom: calc(100% + 8px); left: 0; } }
-@mixin data-tooltip-align-top-right { &::after { bottom: calc(100% + 8px); right: 0; } }
-@mixin data-tooltip-align-bottom-left { &::after { left: 0; top: calc(100% + 8px); } }
-@mixin data-tooltip-align-bottom-right { &::after { right: 0; top: calc(100% + 8px); } }
-
 @mixin flash-tooltip($color) {
     animation: flash-tooltip 500ms;
 
@@ -108,6 +102,11 @@ input[type='checkbox'] { margin: 0; }
 
 [data-tooltip] {
     position: relative;
+
+    &[data-tooltip-position="top-left"]::after { bottom: calc(100% + 8px); left: 0; }
+    &[data-tooltip-position="top-right"]::after { bottom: calc(100% + 8px); right: 0; }
+    &[data-tooltip-position="bottom-left"]::after { left: 0; top: calc(100% + 8px); }
+    &[data-tooltip-position="bottom-right"]::after { right: 0; top: calc(100% + 8px); }
 
     &::after {
         background-color: black;
