--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -52,6 +52,7 @@ body {
     color: white;
     margin: 0;
     padding: var(--body-padding);
+    padding-top: 0;
     position: relative;
 
     // WIP
