--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -9,25 +9,55 @@
     gap: 32px;
 
     #industry-plan-header {
+        align-items: center;
+        display: flex;
+        gap: 64px;
+        height: 48px;
+
         .title {
             font-size: 200%;
         }
 
+        .save-icon {
+            align-items: flex-end;
+            border-bottom: 2px solid white;
+            border-radius: 4px;
+            cursor: pointer;
+            display: flex;
+            height: 24px;
+            justify-content: center;
+            opacity: 0.5;
+            transition: all 500ms;
+            width: 24px;
+
+            &::before {
+                content: '⮕';
+                display: inline-block;
+                transform: rotate(90deg);
+            }
+
+            &:hover { opacity: 1; }
+
+            &.saved {
+                --color-saved: rgb(136, 230, 117);
+                border: 2px solid var(--color-saved);
+                border-radius: 50%;
+                color: var(--color-saved);
+                cursor: unset;
+                pointer-events: none;
+
+                &::before {
+                    content: '✓';
+                    transform: unset;
+                }
+            }
+        }
+
         #refining-penalty {
-            align-items: center;
-            color: rgb(220, 180, 40);
             display: flex;
             font-size: 90%;
             gap: 16px;
-            height: 48px;
-            justify-content: center;
-            left: 48px;
-            opacity: 0.75;
-            padding: 0 16px;
-            position: absolute;
-            top: 0;
-            white-space: nowrap;
-            z-index: 1;
+            opacity: 0.5;
 
             &::before { content: 'Refining Penalty'; }
             &::after { content: 'for secondary outputs'; }
